welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:1: error: Missing closing brace `}' assumed here
var fini:Boolean = false;
^BDRBuggle:5: error: ';' expected but 'case' found.
Se retourner (demi-tour) et avancer d'une case
                                          ^